--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
   <meta charset="UTF-8">
@@ -33,17 +33,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#me">home<span class="sr-only">(current)</span></a></li>
-          <li><a href="#Education">Education</a></li>
-          <li><a href="#Publications">Publications</a></li>
-          <li><a href="#Teaching">Teaching</a></li>
-          <li><a href="#Presentations">Presentations</a></li>
+          <li class="active"><a href="#me">主页<span class="sr-only">(current)</span></a></li>
+          <li><a href="#Education">教育经历</a></li>
+          <li><a href="#Publications">出版物</a></li>
+          <li><a href="#Teaching">教学</a></li>
+          <li><a href="#Presentations">演讲</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="#" role="button" aria-haspopup="true" aria-expanded="false">中文简体 </a>
+            <a href="../index.html" role="button" aria-haspopup="true" aria-expanded="false">English </a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -57,7 +57,7 @@
         <div class="col-md-3 col-xs-12"><img src="../assets/img/xingxing.jpg" class="img-responsive center-block"
             alt="Responsive image"></div>
         <div class="col-md-7">
-          <p style="text-align: left;"><span>Welcome! My name is </span><strong>Meng Han.</strong></p>
+          <p style="text-align: left;"><span>欢迎! 我是 </span><strong>韩梦</strong></p>
           <p>I am a Ph.D. candidate in Economics at the University of Wisconsin-Madison. I am also a member of the Human
             Capital and Economic Opportunity Working Group (HCEO).</p>
           <p>I will join the NBER as a Postdoctoral Research Fellow on Long-Term Fiscal Policy in July 2022. In the fall
@@ -73,7 +73,7 @@
     </div>
     <!--  -->
     <div id="Education" class="container" >
-      <h3>Education</h3>
+      <h3>教育经历</h3>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -88,7 +88,7 @@
     </div>
     <!--  -->
     <div id="Publications" class="container">
-      <h3>Publications</h3>
+      <h3>出版物</h3>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -103,7 +103,7 @@
     </div>
     <!--  -->
     <div id="Teaching" class="container">
-      <h3>Teaching Experience</h3>
+      <h3>教学</h3>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
@@ -119,7 +119,7 @@
     </div>
     <!--  -->
     <div id="Presentations" class="container">
-      <h3>Presentations</h3>
+      <h3>演讲</h3>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
