--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <style>
 
+.table>tbody>tr>td{
+    border:0px;
+    padding-left: 0px;
+    }
   </style>
 </head>
 
@@ -25,9 +29,8 @@
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
         </button>
-
+        <a class="navbar-brand" href="#me">梦</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -124,14 +127,27 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="container"></div>
-          <p>2018&emsp;Econometric Society European Winter Meetings (scheduled), UW Milwaukee (scheduled),
-            UPenn “Labor, Firms, and Macro” Reading Group (scheduled), Carnegie-Rochester-NYU
-            Conference on Public Policy, Iowa State University, EGSC, Family Macro Seminar Series,
-            Minnesota-Wisconsin International/Macro Workshop, WEAI Virtual Conference, ASSA (poster)</p>
-          <p>2018&emsp;UW Madison Macro Student Workshop, Minnesota-Wisconsin International/Macro Workshop,
-            Southern Economic Association Conference</p>
-          <p>2017&emsp;Midwest Macro Fall Meeting, Minnesota-Wisconsin International/Macro Workshop, UW
-            Madison Alumni Conference, UW Madison Macro Student Workshop</p>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>2018</td>
+                  <td>Econometric Society European Winter Meetings (scheduled), UW Milwaukee (scheduled),
+                    UPenn “Labor, Firms, and Macro” Reading Group (scheduled), Carnegie-Rochester-NYU
+                    Conference on Public Policy, Iowa State University, EGSC, Family Macro Seminar Series,
+                    Minnesota-Wisconsin International/Macro Workshop, WEAI Virtual Conference, ASSA (poster)</td>
+                </tr>
+                <tr>
+                  <td>2018</td>
+                  <td>UW Madison Macro Student Workshop, Minnesota-Wisconsin International/Macro Workshop,
+                    Southern Economic Association Conference</td>
+                </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>Midwest Macro Fall Meeting, Minnesota-Wisconsin International/Macro Workshop, UW
+                    Madison Alumni Conference, UW Madison Macro Student Workshop</td>
+                </tr>
+              </tbody>
+            </table>
         </div>
         <div class="col-md-2"></div>
       </div>
