--- a/index.html
+++ b/index.html
@@ -111,11 +111,30 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="container"></div>
-          <p>2018&emsp;Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</p>
-          <p>2018&emsp;Ph.D. Macroeconomics II, teaching assistant to Prof. Noah Williams and Prof. Enghin Atalay</p>
-          <p>2017&emsp;Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</p>
-          <p>2017&emsp;Principles of Economics, teaching assistant to Prof. Korinna Hansen</p>
-          <p>2016&emsp;Principles of Economics, teaching assistant to Prof. Geoffrey Wallace</p>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>2018</td>
+                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
+                </tr>
+                <tr>
+                  <td>2018</td>
+                  <td>Ph.D. Macroeconomics II, teaching assistant to Prof. Noah Williams and Prof. Enghin Atalay</td>
+                </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
+                </tr>
+                <tr>
+                  <td>2017</td>
+                  <td>Principles of Economics, teaching assistant to Prof. Korinna Hansen</td>
+                </tr>
+                <tr>
+                  <td>2016</td>
+                  <td>Principles of Economics, teaching assistant to Prof. Geoffrey Wallace</td>
+                </tr>
+              </tbody>
+            </table>
         </div>
         <div class="col-md-2"></div>
       </div>
