--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  <style>
-
-.table>tbody>tr>td{
-    border:0px;
-    padding-left: 0px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -30,17 +24,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#me">梦</a>
+        <a class="navbar-brand" href="#me">M.Han</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#me">home<span class="sr-only">(current)</span></a></li>
-          <li><a href="#Education">Education</a></li>
-          <li><a href="#Publications">Publications</a></li>
-          <li><a href="#Teaching">Teaching</a></li>
-          <li><a href="#Presentations">Presentations</a></li>
+          <li class="active"><a href="index.html">home<span class="sr-only">(current)</span></a></li>
+          <li><a href="en/Education.html">Education</a></li>
+          <li><a href="en/Publications.html">Publications</a></li>
+          <li><a href="en/Teaching.html">Teaching</a></li>
+          <li><a href="en/Presentations.html">Presentations</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
