--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -10,13 +10,7 @@
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <style>
-
-      .table>tbody>tr>td{
-          border:0px;
-          padding-left: 0px;
-          }
-        </style>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -31,17 +25,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#me">梦</a>
+        <a class="navbar-brand" href="index.html">梦</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#me">主页<span class="sr-only">(current)</span></a></li>
-          <li><a href="#Education">教育经历</a></li>
-          <li><a href="#Publications">出版物</a></li>
-          <li><a href="#Teaching">教学</a></li>
-          <li><a href="#Presentations">演讲</a></li>
+          <li class="active"><a href="index.html">主页<span class="sr-only">(current)</span></a></li>
+          <li><a href="Education.html">教育经历</a></li>
+          <li><a href="Publications.html">出版物</a></li>
+          <li><a href="Teaching.html">教学</a></li>
+          <li><a href="Presentations.html">演讲</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
