--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M.Han</title>
-  <link href="/assets/img/icon.ico" rel="shortcut icon">
+  <link href="assets/img/icon.ico" rel="shortcut icon">
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -46,7 +46,7 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <div id="content">
+  <div id="content" style="padding-top: 5%; padding-bottom: 5%;">
     <!--  -->
     <div id="me" class="container" >
       <div class="row">
@@ -54,117 +54,17 @@
         <div class="col-md-3 col-xs-12"><img src="assets/img/xingxing.jpg" class="img-responsive center-block"
             alt="Responsive image"></div>
         <div class="col-md-7">
-          <p style="text-align: left;"><span>Welcome! My name is </span><strong>Meng Han.</strong></p>
-          <p>I am a Ph.D. candidate in Economics at the University of Wisconsin-Madison. I am also a member of the Human
-            Capital and Economic Opportunity Working Group (HCEO).</p>
-          <p>I will join the NBER as a Postdoctoral Research Fellow on Long-Term Fiscal Policy in July 2022. In the fall
-            of 2023, I will join the University of Hong Kong as an Assistant Professor.</p>
-          <p>My research interests are quantitative macroeconomics, labor economics, and demographic economics. I seek
-            to understand three core issues: the macroeconomic impacts of family policies, the implications of fertility
-            choices on social mobility and welfare, and the role of demographic structure in shaping the aggregate
-            economy.</p>
-          <p><strong>Curriculum Vitae (CV): </strong><a href="../assets/pdf/cv.pdf">pdf</a></p>
-          <p><strong>email: </strong><span>m.han@rug.nl</span></p>
+          <p>Hello, I am Meng Han, a PhD candidate in Finance at University of Groningen. My supervisors are <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span> . </p>
+          <p>My main research interests include asset pricing, futures markets and derivative pricing.</p>
+          <p>I am on the Job Market during the 2021-2022 academic year</p>
+          <br>
+          <p><strong>Curriculum Vitae (CV): </strong><a href="assets/pdf/Meng.pdf" target="_blank" rel="noopener noreferrer">pdf</a></p>
+          <br>
+          <p><strong>Email: </strong><span>m.han@rug.nl</span></p>
         </div>
       </div>
     </div>
-    <!--  -->
-    <div id="Education" class="container" >
-      <h3>Education</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-          <p>Ph.D., Economics, University of Wisconsin-Madison, 2022 (expected)</p>
-          <p>M.Sc., Economics, University of Wisconsin-Madison, 2019</p>
-          <p>M.A., Economics, New York University, 2016</p>
-          <p>BEcon&Fin, Economics and Finance, The University of Hong Kong, 2014</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Publications" class="container">
-      <h3>Publications</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-          <p>“Intergenerational Mobility Begins Before Birth”, with Ananth Seshadri, Journal of Monetary Economics
-            (accepted), Carnegie-Rochester-NYU Conference on Public Policy (2021) (link)</p>
-          <p>“Staying at Home: Mobility Effects of Covid-19”, with Sam Engle and John Stromme, Covid Economics:
-            Vetted and Real-Time Papers, Issue 4, 86-102, April 2020 (link)</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Teaching" class="container">
-      <h3>Teaching Experience</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>2018</td>
-                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
-                </tr>
-                <tr>
-                  <td>2018</td>
-                  <td>Ph.D. Macroeconomics II, teaching assistant to Prof. Noah Williams and Prof. Enghin Atalay</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Principles of Economics, teaching assistant to Prof. Korinna Hansen</td>
-                </tr>
-                <tr>
-                  <td>2016</td>
-                  <td>Principles of Economics, teaching assistant to Prof. Geoffrey Wallace</td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Presentations" class="container">
-      <h3>Presentations</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>2018</td>
-                  <td>Econometric Society European Winter Meetings (scheduled), UW Milwaukee (scheduled),
-                    UPenn “Labor, Firms, and Macro” Reading Group (scheduled), Carnegie-Rochester-NYU
-                    Conference on Public Policy, Iowa State University, EGSC, Family Macro Seminar Series,
-                    Minnesota-Wisconsin International/Macro Workshop, WEAI Virtual Conference, ASSA (poster)</td>
-                </tr>
-                <tr>
-                  <td>2018</td>
-                  <td>UW Madison Macro Student Workshop, Minnesota-Wisconsin International/Macro Workshop,
-                    Southern Economic Association Conference</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Midwest Macro Fall Meeting, Minnesota-Wisconsin International/Macro Workshop, UW
-                    Madison Alumni Conference, UW Madison Macro Student Workshop</td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
+   
     <!--  -->
   </div>
   <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
