--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">home<span class="sr-only">(current)</span></a></li>
-          <li><a href="en/Education.html">Education</a></li>
-          <li><a href="en/Publications.html">Publications</a></li>
+          <li><a href="en/research.html">Research</a></li>
           <li><a href="en/Teaching.html">Teaching</a></li>
-          <li><a href="en/Presentations.html">Presentations</a></li>
-
         </ul>
         <ul class="nav navbar-nav navbar-right">
 
@@ -50,7 +47,7 @@
     <!--  -->
     <div id="me" class="container" >
       <div class="row">
-        <div class="col-md-2"></div>
+        <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12"><img src="assets/img/xingxing.jpg" class="img-responsive center-block"
             alt="Responsive image"></div>
         <div class="col-md-7">
@@ -63,6 +60,8 @@
           <p><strong>Email: </strong><span>m.han@rug.nl</span></p>
         </div>
       </div>
+      <div class="col-md-1"></div>
+
     </div>
    
     <!--  -->
