--- a/en/Teaching.html
+++ b/en/Teaching.html
@@ -32,6 +32,7 @@
         <ul class="nav navbar-nav">
           <li><a href="../index.html">home<span class="sr-only">(current)</span></a></li>
           <li><a href="research.html">Research</a></li>
+          <li><a href="cv.html">CV</a></li>
           <li class="active"><a href="Teaching.html">Teaching</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
