--- a/en/cv.html
+++ b/en/cv.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M.Han</title>
-  <link href="assets/img/icon.ico" rel="shortcut icon">
+  <link href="/assets/img/icon.ico" rel="shortcut icon">
   <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -30,51 +30,31 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-          <li><a href="en/research.html">Research</a></li>
-          <li><a href="en/cv.html">CV</a></li>
-          <li><a href="en/Teaching.html">Teaching</a></li>
+          <li><a href="../index.html">home<span class="sr-only">(current)</span></a></li>
+          <li><a href="research.html">Research</a></li>
+          <li class="active"><a href="cv.html">CV</a></li>
+          <li><a href="Teaching.html">Teaching</a></li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="zh-cn/index.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
+            <a href="../zh-cn/Presentations.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <div id="content" style="padding-top: 5%; padding-bottom: 5%;">
+  <div id="content">
+ 
     <!--  -->
-    <div id="me" class="container" >
+    <div class="container" style="padding-top: 4%;">
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-3 col-xs-12"><img  src="assets/img/xingxing.jpg" class="img-responsive center-block"
-            alt="Responsive image"></div>
-        <div class="col-md-7">
-          <h4 style="padding-top: 5%;">Welcome! </h4>
-          <br>
-          <p >I am Meng Han, a PhD candidate in Finance at University of Groningen. My supervisors are <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span> . </p>
-          <p>My main research interests include asset pricing, futures markets and derivative pricing.</p>
-          <p>I am on the Job Market during the 2021-2022 academic year</p>
-       
-        </div>
-        <div class="col-md-1"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p>You may download my CV <span><a href="../assets/pdf/Meng.pdf" target="_blank">here</a></span></p>
+        <div class="col-md-2"></div>
       </div>
-
-      <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-3 col-xs-12">
-          <p style="padding-top: 10%;"><strong>Email:</strong></p>
-          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
-          <br>
-          <p><strong>Address:</strong></p>
-          <p>P.O. Box 800, 9700AV, the Netherlands</p>
-        </div>
-        <div class="col-md-7"> </div>
-        <div class="col-md-1"></div>
-      </div>
-
     </div>
     <!--  -->
   </div>
