--- a/en/research.html
+++ b/en/research.html
@@ -32,6 +32,7 @@
         <ul class="nav navbar-nav">
           <li><a href="../index.html">home<span class="sr-only">(current)</span></a></li>
           <li class="active"><a href="research.html">Research</a></li>
+          <li><a href="cv.html">CV</a></li>
           <li><a href="Teaching.html">Teaching</a></li>
 
         </ul>
@@ -68,6 +69,19 @@
       </div>
     </div>
     <!--  -->
+    <div id="papers" class="container" >
+      <h3>Work in progress</h3>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <div class="container"></div>
+          <div>
+            <strong>Structural Estimation of Convenience Yield and Storage Cost</strong>(with <span><a href="">Lammertjan Dam</a></span>)
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
     <!--  -->
     <div id="Publications" class="container">
       <h3>Publications</h3>
