--- a/en/cv.html
+++ b/en/cv.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p>You may download my CV <span><a href="../assets/pdf/Meng.pdf" target="_blank">here</a></span></p>
+          <p>You may download my CV <span><a href="../assets/pdf/Meng.pdf" target="_blank">here</a></span>(last update Feb 2022).</p>
         <div class="col-md-2"></div>
       </div>
     </div>
