--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-7">
           <h3 style="padding-top: 5%;">Welcome! </h3>
           <br>
-          <p >I am Meng Han, a PhD candidate in Finance at University of Groningen. My supervisors are <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span> . </p>
+          <p >I am Meng Han, a PhD candidate in Finance at University of Groningen. My supervisors are <span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span> . </p>
           <p>My main research interests include asset pricing, futures markets and derivative pricing.</p>
           <p>I am on the Job Market during the 2021-2022 academic year</p>
        
