--- a/en/research.html
+++ b/en/research.html
@@ -93,23 +93,23 @@
               <tbody>
                 <tr>
                   <td>2021</td>
-                  <td><strong><a href="">Probability density forecasts for steam coal prices in China: The role of high-frequency factors.</a></strong> Energy 220 (2021): 119758. </td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/200130252/1_s2.0_S0360544221000074_main.pdf" target="_blank" rel="noopener noreferrer">Probability density forecasts for steam coal prices in China: The role of high-frequency factors.</a></strong> Energy 220 (2021): 119758. </td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data </a></strong>  Environmental Pollution 255 (2019): 113148.</td>
+                  <td><strong><a href="" target="_blank" rel="noopener noreferrer">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data </a></strong>  Environmental Pollution 255 (2019): 113148.</td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors</a></strong> Energy 171 (2019): 69-76.</td>
+                  <td><strong><a href="" target="_blank" rel="noopener noreferrer">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors</a></strong> Energy 171 (2019): 69-76.</td>
                 </tr>
                 <tr>
                   <td>2018</td>
-                  <td><strong><a href="">Forecasting carbon dioxide emissions based on a hybrid of mixed data sampling regression model and back propagation neural network in the USA.</a></strong>  Environmental Science and Pollution Research 25.3 (2018): 2899-2910.</td>
+                  <td><strong><a href="" target="_blank" rel="noopener noreferrer">Forecasting carbon dioxide emissions based on a hybrid of mixed data sampling regression model and back propagation neural network in the USA.</a></strong>  Environmental Science and Pollution Research 25.3 (2018): 2899-2910.</td>
                 </tr>
                 <tr>
                   <td>2018</td>
-                  <td><strong><a href="">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS</a></strong> Applied Energy 216 (2018): 132-141. </td>
+                  <td><strong><a href="" target="_blank" rel="noopener noreferrer">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS</a></strong> Applied Energy 216 (2018): 132-141. </td>
                 </tr>
               </tbody>
             </table>
