--- a/en/research.html
+++ b/en/research.html
@@ -53,7 +53,7 @@
         <div class="col-md-10">
           <div class="container"></div>
           <div>
-            <strong><a href="">Commodity Momentum and Reversal: Do They Exist, and If So, Why?(Job Market Paper)</a></strong>
+            <strong><a href="">Commodity Momentum and Reversal: Do They Exist, and If So, Why?</a></strong>(Job Market Paper)
             <p>This paper studies the momentum and reversal patterns in commodity markets and jointly explains these patterns with risk-return relation. Investigating 23 commodities for a period of fifty years, this paper examines the momentum strategies with formation and holding periods up to sixty months in commodity futures and spot markets. The results suggest quantitively similar momentum and reversal patterns in futures and spot markets once the net convenience yield (latent payoff) is included into spot return: A momentum effect starts first, followed by a reversal effect and then a momentum effect again. The durations and magnitudes of the momentum and reversal effects vary a little with the formation periods. This momentum and reversal patterns can be jointly explained by traditional asset pricing factors together with a yield factor related to the net convenience yield. The results are robust to the selection of momentum strategies and the estimation method with rolling windows.</p>
           </div>
           <div>
