--- a/en/research.html
+++ b/en/research.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -76,7 +76,7 @@
         <div class="col-md-10">
           <div class="container"></div>
           <div>
-            <strong>Structural Estimation of Convenience Yield and Storage Cost</strong>(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>)
+            <strong>Structural Estimation of Convenience Yield and Storage Cost</strong>(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">&nbsp;Lammertjan Dam</a></span>)
           </div>
         </div>
         <div class="col-md-1"></div>
@@ -97,11 +97,11 @@
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/108336224/1_s2.0_S0269749119301952_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data </a></strong>  Environmental Pollution 255 (2019): 113148.</td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/108336224/1_s2.0_S0269749119301952_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data.</a></strong>  Environmental Pollution 255 (2019): 113148.</td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/81175101/1_s2.0_S0360544219300118_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors</a></strong> Energy 171 (2019): 69-76.</td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/81175101/1_s2.0_S0360544219300118_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors.</a></strong> Energy 171 (2019): 69-76.</td>
                 </tr>
                 <tr>
                   <td>2018</td>
@@ -109,7 +109,7 @@
                 </tr>
                 <tr>
                   <td>2018</td>
-                  <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0306261918301223" target="_blank" rel="noopener noreferrer">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS</a></strong> Applied Energy 216 (2018): 132-141. </td>
+                  <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0306261918301223" target="_blank" rel="noopener noreferrer">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS.</a></strong> Applied Energy 216 (2018): 132-141. </td>
                 </tr>
               </tbody>
             </table>
