--- a/en/research.html
+++ b/en/research.html
@@ -93,23 +93,23 @@
               <tbody>
                 <tr>
                   <td>2021</td>
-                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/200130252/1_s2.0_S0360544221000074_main.pdf" target="_blank" rel="noopener noreferrer">Probability density forecasts for steam coal prices in China: The role of high-frequency factors.</a></strong> Energy 220 (2021): 119758. </td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/200130252/1_s2.0_S0360544221000074_main.pdf" target="_blank" rel="noopener noreferrer">Probability density forecasts for steam coal prices in China: The role of high-frequency factors.</a></strong><em> Energy</em> 220 (2021): 119758. </td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/108336224/1_s2.0_S0269749119301952_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data.</a></strong>  Environmental Pollution 255 (2019): 113148.</td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/108336224/1_s2.0_S0269749119301952_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting China's wastewater discharge using dynamic factors and mixed-frequency data.</a></strong> <em> Environmental Pollution </em>255 (2019): 113148.</td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/81175101/1_s2.0_S0360544219300118_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors.</a></strong> Energy 171 (2019): 69-76.</td>
+                  <td><strong><a href="https://pure.rug.nl/ws/portalfiles/portal/81175101/1_s2.0_S0360544219300118_main.pdf" target="_blank" rel="noopener noreferrer">Forecasting carbon prices in the Shenzhen market, China: The role of mixed-frequency factors.</a></strong> <em> Energy</em> 171 (2019): 69-76.</td>
                 </tr>
                 <tr>
                   <td>2018</td>
-                  <td><strong><a href="https://link.springer.com/article/10.1007/s11356-017-0642-6" target="_blank" rel="noopener noreferrer">Forecasting carbon dioxide emissions based on a hybrid of mixed data sampling regression model and back propagation neural network in the USA.</a></strong>  Environmental Science and Pollution Research 25.3 (2018): 2899-2910.</td>
+                  <td><strong><a href="https://link.springer.com/article/10.1007/s11356-017-0642-6" target="_blank" rel="noopener noreferrer">Forecasting carbon dioxide emissions based on a hybrid of mixed data sampling regression model and back propagation neural network in the USA.</a></strong> <em> Environmental Science and Pollution Research</em> 25.3 (2018): 2899-2910.</td>
                 </tr>
                 <tr>
                   <td>2018</td>
-                  <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0306261918301223" target="_blank" rel="noopener noreferrer">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS.</a></strong> Applied Energy 216 (2018): 132-141. </td>
+                  <td><strong><a href="https://www.sciencedirect.com/science/article/abs/pii/S0306261918301223" target="_blank" rel="noopener noreferrer">Usefulness of economic and energy data at different frequencies for carbon price forecasting in the EU ETS.</a></strong> <em> Applied Energy</em> 216 (2018): 132-141. </td>
                 </tr>
               </tbody>
             </table>
@@ -129,11 +129,11 @@
               <tbody>
                 <tr>
                   <td>2021</td>
-                  <td>International Risk Management Conference 2021 (IRMC2021), SOM PhD Confer- ence, SOM PhD Seminar</td>
+                  <td>International Risk Management Conference 2021 (IRMC2021), SOM PhD Conference, SOM PhD Seminar</td>
                 </tr>
                 <tr>
                   <td>2019</td>
-                  <td>11th International Conference on Applied Energy (ICAE2019), fourth conference on econometric models of climate change (EMCC-IV)</td>
+                  <td>11th International Conference on Applied Energy (ICAE2019), Fourth Conference on Econometric Models of Climate Change (EMCC-IV)</td>
                 </tr>
               </tbody>
             </table>
