--- a/en/research.html
+++ b/en/research.html
@@ -30,7 +30,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="../index.html">home<span class="sr-only">(current)</span></a></li>
+          <li><a href="../index.html">Home<span class="sr-only">(current)</span></a></li>
           <li class="active"><a href="research.html">Research</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a href="Teaching.html">Teaching</a></li>
