--- a/en/research.html
+++ b/en/research.html
@@ -76,7 +76,7 @@
         <div class="col-md-10">
           <div class="container"></div>
           <div>
-            <strong>Structural Estimation of Convenience Yield and Storage Cost</strong>(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">&nbsp;Lammertjan Dam</a></span>)
+            <strong>Structural Estimation of Convenience Yield and Storage Cost</strong>&nbsp;(with <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Lammertjan Dam</a></span>)
           </div>
         </div>
         <div class="col-md-1"></div>
