--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -23,145 +23,64 @@
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">梦</a>
+        <a class="navbar-brand" href="index.html">M.Han</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">主页<span class="sr-only">(current)</span></a></li>
-          <li><a href="Education.html">教育经历</a></li>
-          <li><a href="Publications.html">出版物</a></li>
-          <li><a href="Teaching.html">教学</a></li>
-          <li><a href="Presentations.html">演讲</a></li>
-
+          <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="../en/research.html">Research</a></li>
+          <li><a href="../en/cv.html">CV</a></li>
+          <li><a href="../en/Teaching.html">Teaching</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="../index.html" role="button" aria-haspopup="true" aria-expanded="false">English </a>
+            <a href="../index.html" role="button" aria-haspopup="true" aria-expanded="false" >English </a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <div id="content">
+  <div id="content" style="padding-top: 5%; padding-bottom: 5%;">
     <!--  -->
     <div id="me" class="container" >
       <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-3 col-xs-12"><img src="../assets/img/xingxing.jpg" class="img-responsive center-block"
+        <div class="col-md-1"></div>
+        <div class="col-md-3 col-xs-12"><img  src="../assets/img/xingxing.jpg" class="img-responsive center-block"
             alt="Responsive image"></div>
         <div class="col-md-7">
-          <p style="text-align: left;"><span>欢迎! 我是 </span><strong>韩梦</strong></p>
-          <p>I am a Ph.D. candidate in Economics at the University of Wisconsin-Madison. I am also a member of the Human
-            Capital and Economic Opportunity Working Group (HCEO).</p>
-          <p>I will join the NBER as a Postdoctoral Research Fellow on Long-Term Fiscal Policy in July 2022. In the fall
-            of 2023, I will join the University of Hong Kong as an Assistant Professor.</p>
-          <p>My research interests are quantitative macroeconomics, labor economics, and demographic economics. I seek
-            to understand three core issues: the macroeconomic impacts of family policies, the implications of fertility
-            choices on social mobility and welfare, and the role of demographic structure in shaping the aggregate
-            economy.</p>
-          <p><strong>Curriculum Vitae (CV): </strong><a href="../assets/pdf/cv.pdf">pdf</a></p>
-          <p><strong>email: </strong><span>m.han@rug.nl</span></p>
+          <h3 style="padding-top: 5%;">您好，我是韩梦。 </h3>
+          <br>
+          <p >我目前是格罗宁根大学金融学博士。 导师是<span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span>.</p>
+          <p>我的主要研究方向包括资产定价，期货市场和衍生品定价。<a href="../en/research.html">请点击这里查看我的论文</a> </p>
+          <p>我将于2021-2022学年求职。</p>
+          <p><a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer">这是我的Google Scholar</a></p>
+          <p><a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer">这是我的ResearchGate</a></p>
         </div>
+        <div class="col-md-1"></div>
       </div>
-    </div>
-    <!--  -->
-    <div id="Education" class="container" >
-      <h3>教育经历</h3>
+
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3 col-xs-12">
+          <p style="padding-top: 10%;"><strong>Email:</strong></p>
+          <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
+          <br>
+          <p><strong>Address:</strong></p>
+          <p>P.O. Box 800, 9700AV, the Netherlands</p>
+        </div>
+        <div class="col-md-7"> </div>
+        <div class="col-md-1"></div>
+      </div>
+      <p> <hr /></p>
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-          <p>Ph.D., Economics, University of Wisconsin-Madison, 2022 (expected)</p>
-          <p>M.Sc., Economics, University of Wisconsin-Madison, 2019</p>
-          <p>M.A., Economics, New York University, 2016</p>
-          <p>BEcon&Fin, Economics and Finance, The University of Hong Kong, 2014</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Publications" class="container">
-      <h3>出版物</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-          <p>“Intergenerational Mobility Begins Before Birth”, with Ananth Seshadri, Journal of Monetary Economics
-            (accepted), Carnegie-Rochester-NYU Conference on Public Policy (2021) (link)</p>
-          <p>“Staying at Home: Mobility Effects of Covid-19”, with Sam Engle and John Stromme, Covid Economics:
-            Vetted and Real-Time Papers, Issue 4, 86-102, April 2020 (link)</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Teaching" class="container">
-      <h3>教学</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>2018</td>
-                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
-                </tr>
-                <tr>
-                  <td>2018</td>
-                  <td>Ph.D. Macroeconomics II, teaching assistant to Prof. Noah Williams and Prof. Enghin Atalay</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Ph.D. Macroeconomics I, teaching assistant to Prof. Dean Corbae and Prof. Rasmus Lentz</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Principles of Economics, teaching assistant to Prof. Korinna Hansen</td>
-                </tr>
-                <tr>
-                  <td>2016</td>
-                  <td>Principles of Economics, teaching assistant to Prof. Geoffrey Wallace</td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-    </div>
-    <!--  -->
-    <div id="Presentations" class="container">
-      <h3>演讲</h3>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <div class="container"></div>
-            <table class="table">
-              <tbody>
-                <tr>
-                  <td>2018</td>
-                  <td>Econometric Society European Winter Meetings (scheduled), UW Milwaukee (scheduled),
-                    UPenn “Labor, Firms, and Macro” Reading Group (scheduled), Carnegie-Rochester-NYU
-                    Conference on Public Policy, Iowa State University, EGSC, Family Macro Seminar Series,
-                    Minnesota-Wisconsin International/Macro Workshop, WEAI Virtual Conference, ASSA (poster)</td>
-                </tr>
-                <tr>
-                  <td>2018</td>
-                  <td>UW Madison Macro Student Workshop, Minnesota-Wisconsin International/Macro Workshop,
-                    Southern Economic Association Conference</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>Midwest Macro Fall Meeting, Minnesota-Wisconsin International/Macro Workshop, UW
-                    Madison Alumni Conference, UW Madison Macro Student Workshop</td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="col-md-8"> 
+          <p style="font-size: 9px; text-align: center;">由于服务器的限制，一部分网页链接与个人照片可能无法在境内访问，敬请谅解。
+            如果您有任何需求，请邮件联系我，我将非常乐意为您解答。谢谢！</p>
         </div>
         <div class="col-md-2"></div>
       </div>
