--- a/en/Teaching.html
+++ b/en/Teaching.html
@@ -38,7 +38,7 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="../zh-cn/Teaching.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
+            <a href="../zh-cn/index.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
