--- a/en/research.html
+++ b/en/research.html
@@ -39,7 +39,7 @@
         <ul class="nav navbar-nav navbar-right">
 
           <li class="dropdown">
-            <a href="../zh-cn/Education.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
+            <a href="../zh-cn/index.html" role="button" aria-haspopup="true" aria-expanded="false" >中文简体 </a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
