--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -57,6 +57,7 @@
           <p >我目前是格罗宁根大学金融学博士。 导师是<span><a href="https://www.rug.nl/staff/l.j.r.scholtens/" target="_blank" rel="noopener noreferrer">Prof. Bert Scholtens</a></span>   and <span><a href="https://www.rug.nl/staff/l.dam/" target="_blank" rel="noopener noreferrer">Prof. Lammertjan Dam</a></span>.</p>
           <p>我的主要研究方向包括资产定价，期货市场和衍生品定价。<a href="../en/research.html">请点击这里查看我的论文</a> </p>
           <p>我将于2021-2022学年求职。</p>
+          <p>这是我的<a href="../assets/pdf/cv-zn.pdf" target="_blank" rel="noopener noreferrer">简历</a>（最近的更新是2022年2月）。</p>
           <p><a href="https://scholar.google.nl/citations?user=R_i5w5sAAAAJ&hl=e" target="_blank" rel="noopener noreferrer">这是我的Google Scholar</a></p>
           <p><a href="https://www.researchgate.net/profile/Meng-Han-24" target="_blank" rel="noopener noreferrer">这是我的ResearchGate</a></p>
         </div>
@@ -66,10 +67,10 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3 col-xs-12">
-          <p style="padding-top: 10%;"><strong>Email:</strong></p>
+          <p style="padding-top: 10%;"><strong>邮箱:</strong></p>
           <p><a href="mailto:m.han@rug.nl" target="_blank">m.han@rug.nl</a></p>
           <br>
-          <p><strong>Address:</strong></p>
+          <p><strong>地址:</strong></p>
           <p>P.O. Box 800, 9700AV, the Netherlands</p>
         </div>
         <div class="col-md-7"> </div>
